--- a/WIPFeatureFinder/408Final/408Final.vcxproj
+++ b/WIPFeatureFinder/408Final/408Final.vcxproj
@@ -61,7 +61,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
       <TargetMachinePlatform>64</TargetMachinePlatform>
       <AdditionalCompilerOptions>
       </AdditionalCompilerOptions>
-      <CodeGeneration>compute_50,sm_50</CodeGeneration>
+      <CodeGeneration>compute_50,sm_50;compute_30,sm_30</CodeGeneration>
       <GenerateRelocatableDeviceCode>true</GenerateRelocatableDeviceCode>
       <InterleaveSourceInPTX>true</InterleaveSourceInPTX>
       <GenerateLineInfo>true</GenerateLineInfo>
@@ -69,6 +69,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
       <Runtime>MTd</Runtime>
       <RuntimeChecks>RTC1</RuntimeChecks>
       <TypeInfo>true</TypeInfo>
+      <AdditionalOptions>-Xcompiler "/openmp" %(AdditionalOptions)</AdditionalOptions>
     </CudaCompile>
     <CudaLink>
       <GPUDebugInfo>true</GPUDebugInfo>
@@ -98,7 +99,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     </PostBuildEvent>
     <CudaCompile>
       <TargetMachinePlatform>64</TargetMachinePlatform>
-      <CodeGeneration>compute_50,sm_50</CodeGeneration>
+      <CodeGeneration>compute_50,sm_50;compute_30,sm_30</CodeGeneration>
       <AdditionalOptions>-Xcompiler "/openmp" %(AdditionalOptions)</AdditionalOptions>
       <AdditionalCompilerOptions>
       </AdditionalCompilerOptions>
@@ -106,6 +107,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
       <Optimization>O3</Optimization>
       <Runtime>MT</Runtime>
       <TypeInfo>false</TypeInfo>
+      <MaxRegCount>0</MaxRegCount>
     </CudaCompile>
     <CudaLink>
       <GPUDebugInfo>false</GPUDebugInfo>
@@ -120,6 +122,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <CudaCompile Include="haarfinder.cu" />
     <CudaCompile Include="main.cu" />
     <CudaCompile Include="sat.cu" />
+    <CudaCompile Include="serial_features.cu" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.cuh" />
@@ -128,18 +131,23 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="haarfinder.cuh" />
     <ClInclude Include="main.cuh" />
     <ClInclude Include="sat.cuh" />
+    <ClInclude Include="serial_features.cuh" />
   </ItemGroup>
-	<ItemGroup>
-		<None Include="test_set_images"/>
-		<None Include="training_set_images"/>
-	</ItemGroup>
   <ItemGroup>
-		<Content Include="test_set_images">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</Content>
-		<Content Include="training_set_images">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</Content>
+    <None Include="test_set_images" />
+    <None Include="training_set_images" />
+    <None Include="training_set_labels" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="test_set_images">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="training_set_images">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="training_set_labels">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
