--- a/WIPFeatureFinder/408Final/408Final.vcxproj
+++ b/WIPFeatureFinder/408Final/408Final.vcxproj
@@ -117,6 +117,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     </CudaLink>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <CudaCompile Include="cascade.cu" />
     <CudaCompile Include="dataloader.cu" />
     <CudaCompile Include="features.cu" />
     <CudaCompile Include="haarfinder.cu" />
@@ -125,6 +126,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <CudaCompile Include="serial_features.cu" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="cascade.cuh" />
     <ClInclude Include="common.cuh" />
     <ClInclude Include="dataloader.cuh" />
     <ClInclude Include="features.cuh" />
